[package]
name = "minterest-oracle"
version = "0.1.0"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]
edition = "2018"


[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
minterest-primitives = { path = "./primitives" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"

[dependencies.keyring]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-keyring"

